@@ -236,13 +236,8 @@ public class FireflyGraph implements Graph, WrappedGraph<AerospikeConnection> {
         SindexServiceBase.registerSindexServices(this);
         if (conf.containsKey(ConfigurationHelper.Keys.PLUGIN)) {
             final String pluginConfigString = conf.getString(ConfigurationHelper.Keys.PLUGIN);
-            final List<String> plugins;
-            if (pluginConfigString.contains(",")) {
-                plugins = Arrays.asList(pluginConfigString.split(","));
-            } else {
-                plugins = List.of(pluginConfigString);
-            }
-            for (String plugin : plugins) {
+           final List<String> plugins = Arrays.asList(pluginConfigString.split(","));
+            for (final String plugin : plugins) {
                 PluginUtil.loadPlugin(plugin, conf, this);
             }
         }
@@ -703,8 +698,8 @@ public class FireflyGraph implements Graph, WrappedGraph<AerospikeConnection> {
                 } else if (allowNullProperties) {
                     properties.put((String) keyValues[i], keyValues[i + 1]);
                 }
-            // Since this the first insertion, a null value with allowNullProperties is irrelevant, because there is no
-            // properties to remove, so just ignore.
+                // Since this the first insertion, a null value with allowNullProperties is irrelevant, because there is no
+                // properties to remove, so just ignore.
         }
 
         // Write vertex property to Aerospike.
